--- a/movies.html
+++ b/movies.html
@@ -32,7 +32,14 @@
 
   <script>
     // Your web app's Firebase configuration
-    var firebaseConfig = {}
+    var firebaseConfig = {
+        apiKey: "AIzaSyBaK_4c88rZYVu1J83anoO-gnpgElMvJic",
+        authDomain: "kiei-451-3be18.firebaseapp.com",
+        projectId: "kiei-451-3be18",
+        storageBucket: "kiei-451-3be18.appspot.com",
+        messagingSenderId: "442422270626",
+        appId: "1:442422270626:web:9069835403d3ccbca1d5fb"
+    }
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
